# python-alarm-clock-cli

./: .coverage  README.md  pyproject.toml
alarm_cli/: __main__.py  cli.py  models.py  notifier.py  scheduler.py  storage.py
alarm_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: architecture.md  implementation-plan.md
tests/: test_cli.py  test_models.py  test_notifier.py  test_scheduler.py  test_storage.py
