[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
alarm = "alarm_cli.cli:app"

[tool.setuptools.packages.find]
include = ["alarm_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
